# rspwner

./: Cargo.toml  README.md
docs/: USER_GUIDE.md
src/: cli.rs  config.rs  main.rs
src/analysis/: binary.rs  checksec.rs  elf.rs  imports.rs  mod.rs  pe.rs  strings.rs  symbols.rs  vulnerability.rs
src/core/: agent.rs  exploit_agent.rs  llm.rs  memory.rs  mod.rs  orchestrator.rs  planner.rs  research.rs
src/exploits/: format.rs  generator.rs  heap.rs  mod.rs  rop.rs  templates.rs
src/tools/: capstone.rs  gadgets.rs  gdb.rs  mod.rs  radare.rs
src/utils/: errors.rs  fs.rs  logger.rs  mod.rs
