[package]
name = "rspwner"
version = "0.1.0"
edition = "2021"
description = "AI-powered CTF pwn assistant for binary analysis and exploit scaffolding"
license = "MIT"

[[bin]]
name = "rspwner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
goblin = "0.8"
object = "0.36"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = []
capstone = []
